# priv-modal-vocals

./: .gitignore  AGENTS.md  CLAUDE.md  DEPENDENCIES_SUMMARY.md  README.md  SETUP_INSTRUCTIONS.md  VERIFICATION_SUMMARY.md  pyproject.toml
.github/workflows/: deploy.yml
coqui_service/: __init__.py  download_models.py  engine.py  main.py  models.py  routes.py
coqui_service/utils/: __init__.py  audio.py  chunker.py  speaker_cache.py
dia16_service/: __init__.py  constants.py  download_models.py  engine.py  main.py  models.py  profile_store.py  routes.py
dia_service/: __init__.py  compat.py  constants.py  download_models.py  engine.py  main.py  models.py  profile_store.py  routes.py
docs/: dia16_service.md  dia_service.md  testing.md
execution_docs/: coqui_modal_apis_execution.md  coqui_modal_apis_planning.md  vc_service_implementation.md  whisperx_stt_implementation.md  whisperx_stt_production_deployment.md
shared/: __init__.py  audio.py
vc_service/: __init__.py  download_models.py  engine.py  main.py  models.py  routes.py
vc_service/utils/: __init__.py  audio.py
whisper_service/: __init__.py  download_models.py  engine.py  main.py  models.py  routes.py
whisper_service/utils/: __init__.py  audio_utils.py
